--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "esbuild": "^0.12.28",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^6.0.1",
     "next": "11.1.2",
